# Sanghelios

./: .gitignore  README.md  main.py  pyproject.toml
core/: app.py
core/static/css/: about.css  base.css  campana.css  dashboard.css  inicio.css  mapa.css  screener.css
core/static/js/: app.js  campana.js  config.js  dashboard.js  data.js  mapa.js  questions.js  scenario-manager.js  screener.js
core/templates/: images_generator.html  index.html  sanghelios_informe_eda.html  valid_donation.html
core/tools.py/: write_images.py
data/: DATA.md
data/processed/: df_banco_sangre__times_series.csv  df_banco_sangre_con_cluster.csv
data/raw/: defunciones.csv
notebooks/: 1_preprocessing.ipynb  2_EDA_banco_sangre.ipynb  2_eda.ipynb  3_Clustering_banco_sangre.ipynb  3_Clustering_clustering_banco_sangre.ipynb  4_modeling.ipynb  4_time_series.ipynb
presentation/: README.md  main.py
