[project]
name = "buscando_nombre"
version = "0.1.0"
description = "nusca"
readme = "README.md"
requires-python = "~=3.13.0"
authors = [
    { name = "Jerónimo Hoyos Botero" },
    { name = "Daniel Arango Sohm" },
]
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "manim>=0.20.1",
    "manim-slides[pyqt6]>=5.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]

